# resume_automation_with_claude

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  create_xyz_research.md  phase-6-commit-message.txt  pyproject.toml  resume_augment_computing_applied_ai_engineer.md
.claude/commands/: create-base-prp.md  execute-base-prp.md  prime-core.md  spec-execute.md
.git-simplifier/: .ai_usage.json  .version_state.json  git-simplifier.toml
.git_simplifier_backups/: backup_20250704_130332.json  backup_20250704_143355.json  backup_20250710_002908.json  backup_20250710_093943.json
PRPs/: Project_PRP.md
SPEC_PRP/PRPs/: issue-23-cli-interface-development.md  phase-2-parser-implementation.md  phase-3-ats-formatter.md  phase-4-output-generation.md  phase-5-templates-styling.md  phase-6-config-cli-integration.md
ai_docs/: ats_guidelines.md
docs/: IMPLEMENTATION_PLAN_ISSUE_22.md  configuration.md  converter.md
examples/: sample_resume.md
output/: resume.html
src/: __init__.py  cli.py  formatter.py  generator.py  models.py  parser.py  resume_generator.py  types.py  validation.py
src/config/: __init__.py  config_loader.py  config_model.py  config_validator.py  default_config.yaml
src/config/tests/: __init__.py  test_config_loader.py  test_config_model.py  test_config_validator.py
src/converter/: __init__.py  batch_processor.py  config_manager.py  error_handler.py  exceptions.py  file_manager.py  progress_tracker.py  quality_validator.py  resume_converter.py  types.py  utilities.py
src/converter/tests/: __init__.py  test_batch_processor.py  test_config_manager.py  test_error_handler.py  test_file_manager.py  test_integration.py  test_progress_tracker.py  test_quality_validator.py  test_resume_converter.py  test_types.py  test_utilities.py
src/formatter/: __init__.py  ats_formatter.py  config.py  date_standardizer.py  header_standardizer.py
src/formatter/tests/: __init__.py  test_ats_formatter.py  test_date_standardizer.py  test_header_standardizer.py
src/generator/: __init__.py  config.py  docx_generator.py  html_generator.py  pdf_generator.py
src/generator/tests/: __init__.py  test_docx_generator.py  test_html_generator.py  test_pdf_generator.py
src/templates/: __init__.py  base.html  resume.html  styles.css
src/templates/components/: education.html  experience.html  header.html  skills.html  summary.html
src/templates/docx/: styles.yaml  templates.yaml
src/templates/styles/: base.css  components.css  pdf.css  print.css
src/templates/tests/: __init__.py  test_css_styles.py  test_docx_templates.py  test_html_templates.py
src/tests/: __init__.py  test_integration.py  test_parser.py  test_validation.py
tests/: __init__.py  conftest.py  test_formatter.py  test_generator.py  test_models.py  test_parser.py  test_validation_basic.py
tests/integration/: conftest.py  test_end_to_end_conversion.py
tests/integration/samples/: complex.md  edge_cases.md  simple.md
tests/performance/: test_conversion_performance.py
transcripts/: history.json
transcripts/ai/: current_transcription.md  transcription_07-09-2025_19-39-54.md  transcription_07-09-2025_23-51-06.md
transcripts/normal/: current_transcription.txt  transcription_07-09-2025_19-39-54.txt  transcription_07-09-2025_23-51-06.txt
(+6 files in other folders)
